--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,8 @@ on:
     branches: [ main, develop ]
 
 jobs:
-  test-backend:
-    name: Test Backend
+  build-backend:
+    name: Build Backend
     runs-on: ubuntu-latest
     
     steps:
@@ -19,28 +19,24 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
-
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
+          cache-dependency-path: api/go.sum
 
       - name: Download dependencies
         working-directory: ./api
         run: go mod download
 
-      - name: Run tests
-        working-directory: ./api
-        run: go test -v ./...
-
       - name: Build backend
         working-directory: ./api
         run: go build -o reddit-content-analyzer cmd/main.go
+
+      - name: Verify backend build
+        run: |
+          if [ -f api/reddit-content-analyzer ]; then
+            echo "✓ Backend build successful"
+          else
+            echo "✗ Backend build failed"
+            exit 1
+          fi
 
   build-frontend:
     name: Build Frontend
@@ -65,10 +61,19 @@ jobs:
         working-directory: ./web
         run: npm run build
 
-  build-all:
-    name: Build All
+      - name: Verify frontend build
+        run: |
+          if [ -d web/dist ]; then
+            echo "✓ Frontend build successful"
+          else
+            echo "✗ Frontend build failed"
+            exit 1
+          fi
+
+  test-backend:
+    name: Test Backend
     runs-on: ubuntu-latest
-    needs: [test-backend, build-frontend]
+    needs: [build-backend]
     
     steps:
       - name: Checkout code
@@ -78,52 +83,13 @@ jobs:
         uses: actions/setup-go@v5
         with:
           go-version: '1.23'
+          cache-dependency-path: api/go.sum
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-          cache-dependency-path: web/package-lock.json
-
-      - name: Cache Go modules
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-          restore-keys: |
-            ${{ runner.os }}-go-
-
-      - name: Download Go dependencies
+      - name: Download dependencies
         working-directory: ./api
         run: go mod download
 
-      - name: Install Node dependencies
-        working-directory: ./web
-        run: npm ci
-
-      - name: Build backend
+      - name: Run tests
         working-directory: ./api
-        run: go build -o reddit-content-analyzer cmd/main.go
-
-      - name: Build frontend
-        working-directory: ./web
-        run: npm run build
-
-      - name: Verify builds
-        run: |
-          if [ -f api/reddit-content-analyzer ]; then
-            echo "✓ Backend build successful"
-          else
-            echo "✗ Backend build failed"
-            exit 1
-          fi
-          if [ -d web/dist ]; then
-            echo "✓ Frontend build successful"
-          else
-            echo "✗ Frontend build failed"
-            exit 1
-          fi
+        run: go test -v ./...
 
